# rust-wasm-gol

./: .gitignore  README.md  default.nix  package-lock.json  package.json  shell.nix  webpack.config.js
docs/: 770.index.js  801.index.js  index.js
html/: default.nix  index.html
js/: bettergl.js  bettergl.ts  fps.js  fps.ts  index.js  index.ts  shaders.js  shaders.ts  tsconfig.json
nix/node/: node-packages.nix  regen
nix/pkgs/: default.nix
nix/pkgs/node/: node-packages.json  node-packages.nix
rust/: Cargo.toml  default.nix
rust/benches/: bench.rs
rust/scripts/: default.nix  wasm_pack_build  wasm_pack_test
rust/src/: lib.rs  timer.rs
rust/tests/: web.rs
scripts/: build  build_and_serve  default.nix  pages  serve  serve_dev  webpack_build
