[package]
name = "rust-wasm-gol"
version = "0.1.0"
authors = ["Isaac Elliott <isaace71295@gmail.com>"]
edition = "2018"

[lib]
name = "rust_wasm_gol"
crate-type = ["lib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"