[package]
name = "rust-wasm-gol"
version = "0.1.0"
authors = ["Isaac Elliott <isaace71295@gmail.com>"]
edition = "2018"

[lib]
name = "rust_wasm_gol"
bench = false # enable full use of criterion
crate-type = [
  "lib", 
  "cdylib"
]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }

[features]
default = [
  "wee_alloc"
]

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]

[dev-dependencies]
criterion = "0.3"
wasm-bindgen-test = "0.3.0"

[[bench]]
name = "bench"
harness = false

# [profile.release]
# debug = true